syntax = "proto3";

package memcached;

message SetRequest {
    string key = 1;
    string value = 2;
    uint64 life_time = 3;
}

message SetMultiRequest {
    repeated SetRequest multi_sets = 1;
}

message GetRequest {
    string key = 1;
}

message GetMultiRequest {
    repeated string keys = 1;
}

message AddRequest {
    string key = 1;
    string value = 2;
    uint64 life_time = 3;
}

message DelRequest {
    string key = 1;
}

message BoolResponse {
    string error = 1;
    bool result = 2;
}

message BoolsResponse {
    string error = 1;
    repeated bool result =2;
}

message DataResponse {
    string error = 1;
    string result = 2;
}

message MapResult {
    string key = 1;
    string value = 2;
}

message DatasResponse {
    string error = 1;
    repeated MapResult result = 2;
}

service MemcachedService {
    rpc MemSet (SetRequest) returns (BoolResponse) {}
    rpc MemSetMulti (SetMultiRequest) returns (BoolsResponse) {}
    rpc MemAdd (AddRequest) returns (BoolResponse) {}
    rpc MemDel (DelRequest) returns (BoolResponse) {}
    rpc MemGet (GetRequest) returns (DataResponse) {}
    rpc MemGetMulti (GetMultiRequest) returns (DatasResponse) {}
}